--- a/spotifyClone/style.css
+++ b/spotifyClone/style.css
@@ -34,7 +34,7 @@ body {
     width: 100%;
     padding-top: 14px;
     padding: 23px 14px;
-    font-size:13px;
+    font-size: 13px;
     font-weight: bold;
     align-items: center;
 }
@@ -43,56 +43,228 @@ body {
     width: 30px;
 }
 
-.library{
-    min-height:80vh;
+.library {
+    min-height: 80vh;
+    position: relative;
+}
+
+.footer {
+    display: flex;
+    font-size: 10px;
+    color: grey;
+    gap: 13px;
+    position: absolute;
+    bottom: 0;
+    padding: 10px 0;
+}
+
+.footer a {
+    color: grey;
+}
+
+.right {
+    margin: 16px 0px;
     position:relative;
 }
-.footer{
-    display:flex;
-    font-size: 10px;
-    color:grey;
-    gap:13px;
-    position: absolute;
-    bottom:0;
-}
-.footer a{
-    color:grey;
-}
 
-.right{
-    margin:16px 0px;
-}
-.header{
-    display:flex;
-    justify-content:space-between;
-    gap:4px;
+.header {
+    display: flex;
+    justify-content: space-between;
+    gap: 4px;
     background-color: rgb(34 34 34);
-
+    height:72px;
 }
-.header > *{
+
+.header>* {
     padding: 20px;
 }
-.spotifyPlaylists{
-    padding:16px;
-    }
 
-.cardContainer{
-        margin:30px;
-        display:flex;
-        gap:10px;
-        flex-wrap: wrap;
-    }
-.card{
-    width:200px;
-    padding:10px;
+.spotifyPlaylists {
+    padding: 16px;
+}
+
+.cardContainer {
+    margin: 30px;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    max-height: 70vh;
+}
+
+.card {
+    position: relative;
+    width: 200px;
+    padding: 5px;
     border-radius: 5px;
     background-color: grey;
 }
-.card img{
-    width:100%;
+
+.card img {
+    width: 100%;
     border-radius: 5px;
     object-fit: contain;
 }
-.card >*{
-    padding-top:10px;
+
+.card>* {
+    padding-top: 10px;
+}
+
+.play-btn {
+    width: 50px;
+    height: 50px;
+    background-color: #1DB954;
+    /* Spotify green */
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease;
+    padding-top: 0px;
+    position: absolute;
+    opacity: 1;
+    bottom: 0px;
+    right: 16px;
+    transition: all 0.5s ease-out;
+    bottom: 90px;
+
+}
+.play-btn {
+    width: 50px;
+    height: 50px;
+    background-color: #1DB954;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+
+    position: absolute;
+    right: 16px;
+    bottom: 20px;
+
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 0.4s ease;
+}
+.card:hover .play-btn {
+    opacity: 1;
+    transform: translateY(0);
+}
+.play-btn:hover {
+    transform: scale(1.1);
+    background-color: #1ed760;
+}
+.buttons >*{
+    margin:0 12px;
+    padding:10px;
+}
+.signupbtn{
+    background-color: rgb(34 34 34);
+    color:rgb(197, 190, 190);
+    font-weight:bold;
+    border:none;
+    outline:none;
+    cursor:pointer;
+    font-size:15px;
+}
+.signupbtn:hover{
+    font-size:16px;
+    color:white;
+    
+}
+.loginbtn{
+    background-color: white;
+    border-radius:20px;
+    color:black;
+    /* font-weight:bold; */
+    width:80px;
+    cursor: pointer;
+    font-size:15px;
+}
+.loginbtn:hover{
+    /* width:81px; */
+    /* padding:11px; */
+    font-size:16px;
+    font-weight:bold;
+}
+
+.playbar{
+    background-color: #dad0d0;
+    /* width:79vw; */
+    width:90%;
+    padding: 12px;
+    position:fixed;
+    bottom: 30px;
+    width:70vw;
+    height:39px;
+    filter: invert(1);
+    border-radius:5px;
+
+}
+.songbuttons{
+    display:flex;
+    justify-content: center;
+    gap:15px;
+}
+.song-list{
+    /* height:670px; */
+    /* overflow: auto; */
+    margin: 30px 0;
+}
+.song-list ul{
+    padding:0 12px;
+}
+.song-list .info{
+    font-size: 13px;
+    width:144px;
+}
+.song-list ul li{
+    list-style-type: decimal;
+    display:flex;
+    cursor:pointer;
+    gap:12px;
+    border:1px solid white;
+    border-radius:5px;
+    margin:12px 0;
+    padding-left:0px;
+    padding:10px;
+    width:100%;
+    justify-content: space-between;
+}
+li>*{
+    font-size: 10px;
+}
+.playnow{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.seekbar{
+    height: 2px;
+    width: 99.5%;
+    /* border: 2px solid black; */
+    background-color: black;
+    border-radius: 10px;
+    position: absolute;
+    bottom: 1px;
+    right: 0;
+    /* margin:6px; */
+}
+.circle{
+    width: 13px;
+    height: 13px;
+    background-color: black;
+    border-radius: 13px;
+    position: relative;
+    bottom: 6px;
+    /* right: 3px; */
+    left:0%;
+    transition:left 1s;
+}
+.songbuttons img{
+    cursor:pointer;
 }
